--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "a package that tells you the week number",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build":"npx parcel build index.js",
+    "lint": "npx standard --fix"
   },
   "repository": {
     "type": "git",
