--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "build":"npx parcel build index.js",
-    "lint": "npx standard --fix"
+    "lint": "standard --fix"
   },
   "repository": {
     "type": "git",
