--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a package that tells you the week number",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build":"npx parcel build index.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
   },
   "dependencies": {
     "standard": "^14.3.1"
+  },
+  "standard": {
+    "env": [ "jest" ]
   }
 }
